Added error checking

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"audio_path": "C:\\Users\\jonas\\Downloads\\A1 Evo Neuron-20250117T135633Z-001\\A1 Evo Neuron\\Dolby Atmos measurement sweeps for REW\\Lossless", "channels": ["FR", "FL"]}
+{"audio_path": "C:\\Users\\jonas\\Downloads\\A1 Evo Neuron-20250117T135633Z-001\\A1 Evo Neuron\\Dolby Atmos measurement sweeps for REW\\Lossless", "channels": ["FL", "FR", "SW1", "SW2"]}
