--- a/.github/workflows/create-exe.yml
+++ b/.github/workflows/create-exe.yml
@@ -18,13 +18,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: PyInstaller Windows
-      uses: JackMcKew/pyinstaller-action-windows@python3-10-pyinstaller-5-3
+    - uses: actions/checkout@v4
+    - name: Package Application
+      uses: JackMcKew/pyinstaller-action-windows@main
       with:
         path: .
 
-    - uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v4
       with:
         name: AutomatedSweeps
         path: dist/windows # or path/to/artifact
