--- a/.github/workflows/create-exe.yml
+++ b/.github/workflows/create-exe.yml
@@ -21,6 +21,8 @@ jobs:
     - uses: actions/checkout@v4
     - name: Package Application
       uses: JackMcKew/pyinstaller-action-windows@main
+      with:
+        path: src
 
     - uses: actions/upload-artifact@v4
       with:
