Changed run path

--- a/.github/workflows/create-exe.yml
+++ b/.github/workflows/create-exe.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Package Application
       uses: JackMcKew/pyinstaller-action-windows@main
       with:
-        path: src
+        path: package
 
     - uses: actions/upload-artifact@v4
       with:
