--- a/.github/workflows/create-exe.yml
+++ b/.github/workflows/create-exe.yml
@@ -27,4 +27,4 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: AutomatedSweeps
-        path: dist/windows # or path/to/artifact
+        path: package/dist/windows # or path/to/artifact
