--- a/.github/workflows/create-exe.yml
+++ b/.github/workflows/create-exe.yml
@@ -11,13 +11,12 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   build:
-
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
-    - uses: setup-python@v5
+    - uses: actions/setup-python@v5
       with:
-        python-version: '3.11'
+        python-version: 3.11
     - run: pip install -r requirements.txt pyinstaller
     - run: pyinstaller --clean --onefile --icon assets/AutomatedSweeps.ico -y -n  "AutomatedSweeps" --add-data "assets;assets" --add-data "src/ui.tcss:." src/main.py
     - uses: actions/upload-artifact@v4
