--- a/.github/workflows/create-exe.yml
+++ b/.github/workflows/create-exe.yml
@@ -21,4 +21,5 @@ jobs:
     - run: pyinstaller --clean --onefile --icon assets/AutomatedSweeps.ico -y -n  "AutomatedSweeps" --add-data "assets;assets" --add-data "src/ui.tcss:." src/main.py
     - uses: actions/upload-artifact@v4
       with:
+        name: AutomatedSweeps
         path: dist/*
