--- a/.github/workflows/create-exe.yml
+++ b/.github/workflows/create-exe.yml
@@ -13,13 +13,37 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
-      with:
-        python-version: 3.11
-    - run: pip install -r requirements.txt pyinstaller
-    - run: pyinstaller --clean --onefile --icon assets/AutomatedSweeps.ico -y -n  "AutomatedSweeps" --add-data "assets;assets" --add-data "src/ui.tcss:." src/main.py
-    - uses: actions/upload-artifact@v4
-      with:
-        name: AutomatedSweeps
-        path: dist/*
+      - uses: actions/checkout@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version-file: "pyproject.toml"
+
+      - name: Install the project
+        run: uv sync --all-extras --dev
+
+      - name: Build the project exe
+        run: uv run pyinstaller --clean --onefile --icon assets/AutomatedSweeps.ico -y -n  "AutomatedSweeps" --add-data "assets;assets" --add-data "src/ui.tcss:." src/main.py
+      
+      - uses: actions/upload-artifact@v4
+        with:
+          name: AutomatedSweeps
+          path: dist/*
+      
+
+    # - uses: actions/setup-python@v5
+    #   with:
+    #     python-version: 3.11
+    # - run: pip install -r requirements.txt pyinstaller
+    # - run: pyinstaller --clean --onefile --icon assets/AutomatedSweeps.ico -y -n  "AutomatedSweeps" --add-data "assets;assets" --add-data "src/ui.tcss:." src/main.py
+    # - uses: actions/upload-artifact@v4
+    #   with:
+    #     name: AutomatedSweeps
+    #     path: dist/*
