--- a/.github/workflows/create-app.yml
+++ b/.github/workflows/create-app.yml
@@ -1,4 +1,4 @@
-name: Package exe with PyInstaller - Windows
+name: Package dmg with PyInstaller - MacOS
 
 # Controls when the workflow will run
 on:
@@ -11,7 +11,7 @@ on:
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   Build:
-    runs-on: windows-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
 
@@ -29,7 +29,7 @@ jobs:
       - name: Install the project
         run: uv sync --all-extras --dev
 
-      - name: Build the project exe
+      - name: Build the project dmg
         run: uv run pyinstaller --clean --onefile --windowed --icon assets/AutomatedSweeps.ico -y -n  "AutomatedSweeps" --add-data "assets;assets" --add-data "src/ui.tcss:." src/main.py
       
       - uses: actions/upload-artifact@v4
