--- a/.github/workflows/create-exe.yml
+++ b/.github/workflows/create-exe.yml
@@ -4,6 +4,8 @@ name: Package exe with PyInstaller - Windows
 on:
   # Triggers the workflow on push
   push:
+    branches:
+      - '**'  # Runs on all branches, but NOT on releases
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
